--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@android:dimen/app_icon_size"
         android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="Email"
@@ -21,7 +21,7 @@
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@android:dimen/app_icon_size"
         android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="pasword"
