--- a/app/src/main/res/layout/activity_add_item2.xml
+++ b/app/src/main/res/layout/activity_add_item2.xml
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/itemDescriptionView" />
 
     <EditText
-        android:id="@+id/itemLongitudeView"
+        android:id="@+id/tvItemLongitudeView"
         android:layout_width="wrap_content"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_marginStart="8dp"
@@ -86,6 +86,6 @@
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemLongitudeView" />
+        app:layout_constraintTop_toBottomOf="@+id/tvItemLongitudeView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
